# elPaSo-Core

./: .gitignore  .gitlab-ci-pipeline-gnu.yml  .gitlab-ci-pipeline-intel.yml  .gitlab-ci.yml  AUTHORS.md  CITATION.cff  CMakeElpaso3rdPartyDependencies.cmake  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md
.devcontainer/: README_conan_env  devcontainer.json
.devcontainer/docker-gnu/: dockerfile
cmake/: YOURCOMPUTER-CLANG-TIDY.config.cmake  YOURCOMPUTER.config-ci.cmake  YOURCOMPUTER.config-lib.cmake  YOURCOMPUTER.config-lint-clang.cmake  YOURCOMPUTER.config.cmake
cmake/dependencies/: FindARPACK.cmake  FindGTEST.cmake  FindGZSTREAM.cmake  FindHDF5.cmake  FindINTELMKL.cmake  FindINTELMPI.cmake  FindOPENMPI.cmake  FindPETSC.cmake  FindSLEPC.cmake  FindXMLIO.cmake
cmake/macro/: CMakeAssertLibraryHandles.cmake  CMakeCollectPackageData.cmake  CMakeElpasoDependencies.cmake  CMakeElpasoSetGitRepository.cmake
doc/: Makefile  _config.yml  _toc.yml  md_cheatsheet.md
doc/doxygen/: Doxyfile
doc/images/elements/: dummy.eps  hex20.eps  hex27.eps  hex8.eps  line2d.eps  line3d.eps  quad4.eps  quad9.eps
doc/main/: intro.md
doc/manual/: .gitignore  Makefile  elpasoCore-Manual.tex
doc/manual/.devcontainer/: devcontainer.json
doc/manual/chapters/: corecomponents.tex  developing.tex  introduction.tex  usage.tex
doc/manual/docker/: Dockerfile
doc/manual/literature/: keypubelpaso.bib
doc/technical/: contributing.md  devsetup.md  technical.md
doc/technical/sustainability/: citability.md
doc/theory/: feature_overview.md  utility.md
doc/theory/bem_utility/: bem_utility.md
doc/theory/fem_utility/: element_library.md  fem_utility.md  material_library.md
doc/theory/hpc_utility/: hpc_utility.md
doc/theory/mor_utility/: mor_utility.md
doc/theory/sbfem_utility/: sbfem_utility.md
doc/tutorials/: getting_started.md  running.md  running_parametric.md  tutorials.md
doc/tutorials/FEM_tutorials/: Example_1.md  Example_2.md  Example_3.md
doc/tutorials/installation/: install_docker.md  install_executable.md  install_library.md  installation.md
doc/tutorials/job_files/: cpardisohybrid.job  intelmpi.job  mumpshybrid.job  sleep.job
docker/release-gnu/: dockerfile
elpasoCore/conan/conan-arpack/: conanfile-arpack2-1-complex-intel.py  conanfile-arpack2-1-real-intel.py  conanfile-arpack2.1-complex-gnu.py  conanfile-arpack2.1-complex-intel.py  conanfile-arpack2.1-real-gnu.py  conanfile-arpack2.1-real-intel.py
elpasoCore/conan/conan-elpasocore/: conanfile-elpasocore-complex-gnu.py  conanfile-elpasocore-complex-intel.py  conanfile-elpasocore-gnu.py  conanfile-elpasocore-intel.py  conanfile-elpasocore-real-gnu.py  conanfile-elpasocore-real-intel.py
elpasoCore/conan/conan-petsc/: conanfile-petsc3-14-4-complex-gnu.py  conanfile-petsc3-14-4-complex-intel.py  conanfile-petsc3-14-4-real-gnu.py  conanfile-petsc3-14-4-real-intel.py  conanfile-petsc3-15-0-complex-gnu.py  conanfile-petsc3-16-1-complex-gnu.py  conanfile-petsc3-16-1-complex-intel.py  conanfile-petsc3-16-1-real-gnu.py  conanfile-petsc3-16-1-real-intel.py  conanfile-petsc3.19.1-complex-gnu.py  conanfile-petsc3.19.1-complex-intel.py  conanfile-petsc3.19.1-real-gnu.py  conanfile-petsc3.19.1-real-intel.py
elpasoCore/conan/conan-slepc/: conanfile-slepc3-14-2-complex-gnu.py  conanfile-slepc3-14-2-complex-intel.py  conanfile-slepc3-14-2-real-gnu.py  conanfile-slepc3-14-2-real-intel.py  conanfile-slepc3-15-0-complex-gnu.py  conanfile-slepc3-16-0-complex-gnu.py  conanfile-slepc3-16-0-complex-intel.py  conanfile-slepc3-16-0-real-gnu.py  conanfile-slepc3-16-0-real-intel.py  conanfile-slepc3.19.1-complex-gnu.py  conanfile-slepc3.19.1-complex-intel.py  conanfile-slepc3.19.1-real-gnu.py  conanfile-slepc3.19.1-real-intel.py
elpasoCore/elpaso/: .gitlab-ci-elpaso.yml  CMakeLists.txt  ConanConfig.cmake  LocalConfig.cmake
elpasoCore/elpasoC/: .gitlab-ci-elpasoC.yml  CMakeLists.txt  ConanConfig.cmake  LocalConfig.cmake
elpasoCore/elpasoT/: .gitlab-ci-elpasoT.yml  CMakeLists.txt  ConanConfig.cmake  LocalConfig.cmake
elpasoCore/source/: CMakePackages.cmake
elpasoCore/source/analysis/: CMakePackage.cmake  analysis.cpp  analysis.h  analysisfactory.cpp  analysisfactory.h  parMetisInterface.cpp
elpasoCore/source/basics/: CMakePackage.cmake  misc.cpp  misc.h
elpasoCore/source/bc/: CMakePackage.cmake  boundarycondition.cpp  boundarycondition.h  boundaryconditionfactory.cpp  boundaryconditionfactory.h  boundaryconditionfluid.cpp  boundaryconditionfluid.h  boundaryconditionstructure.cpp  boundaryconditionstructure.h  constraint.cpp  constraint.h
elpasoCore/source/element/: CMakePackage.cmake  element.cpp  element.h  elementcoupling.cpp  elementcoupling.h  elementfactory.cpp  elementfactory.h  elementfem.cpp  elementfem.h  history.cpp  history.h
elpasoCore/source/fedata/: CMakePackage.cmake  basics_dof.h  dof.cpp  dof.h  entities.cpp  entities.h  group.cpp  group.h  mesh.cpp  mesh.h  node.cpp  node.h  problem.cpp  problem.h
elpasoCore/source/main/: main.cpp
elpasoCore/source/material/: CMakePackage.cmake  material.cpp  material.h  materialfactory.cpp  materialfactory.h
elpasoCore/source/math/: CMakePackage.cmake  mathlibrary.cpp  mathlibrary.h  matrix.h  vektor.h
elpasoCore/source/misc/: CMakePackage.cmake  array3d.cpp  array3d.h  counter.h  filter.cpp  filter.h  gausspoints.cpp  gausspoints.h  id.cpp  id.h  mytypes.h  point.cpp  point.h
elpasoCore/source/shape/: CMakePackage.cmake  shape.cpp  shape.h  shapefunctions.cpp  shapefunctions.h  shapehex8.cpp  shapehex8.h  shapequad4.cpp  shapequad4.h
elpasoCore/test/: testmain.cpp
elpasoCore/test/bc/: testboundaryconditionfluid.h  testboundaryconditionstructure.h
elpasoCore/test/fedata/: testdof.h  testproblem.h
elpasoCore/test/material/: testmaterial.h
elpasoCore/test/math/: testtMatrix.h  testtVector.h
elpasoCore/test/misc/: testpoint.h
elpasoCore/test/shape/: CMakePackage.cmake  testshapefunction.h  testshapehex8.h  testshapequad4.h
tools/MATLAB/elpaso-toolbox/: elpasoChangeMaterialInElpasoHdf5.m  elpasoComputeAndExportDynamicSystemMatrix.m  (+5 more)
(+264 files in other folders)
